--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "SFDO Campfire",
+  "orgName": "SFDO Campfire Test",
   "adminEmail": "stewart.anderson+uscampfire@salesforce.com",
   "description": "SFDO Campfire",
   "template": "0TT4W000007CyQq",
