--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,6 +1,6 @@
 {
   "orgName": "SFDO Campfire",
-  "adminEmail": "stewart.anderson+uscampfire@salesforce.com",
+  "adminEmail": "sfdocampfires@salesforce.com",
   "description": "SFDO Campfire",
   "template": "0TT4W000007CyQq",
   "settings": {
