--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -2,7 +2,7 @@
   "orgName": "SFDO Campfire",
   "adminEmail": "sfdocampfires@salesforce.com",
   "description": "SFDO Campfire",
-  "template": "0TT4W000007CyQq",
+  "template": "0TT4W000006en8g",
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
