Update "features": ["EnableSetPasswordInApi"]
EnableSetPasswordInApi as a setting was deprecated in API v 51.0. Updated to set this as a feature.

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -2,15 +2,11 @@
   "orgName": "SFDO Campfire",
   "adminEmail": "sfdocampfires@salesforce.com",
   "description": "SFDO Campfire",
+  "features": ["EnableSetPasswordInApi"],
   "template": "0TT4W000006en8g",
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
     },
-    "securitySettings": {
-      "passwordPolicies": {
-        "enableSetPasswordInApi": true
-      }
-    }
   }
 }
