--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -3,7 +3,7 @@
   "adminEmail": "sfdocampfires@salesforce.com",
   "description": "SFDO Campfire",
   "features": ["EnableSetPasswordInApi","CMSUnlimitedUse"],
-  "template": "0TT4W000006enNU",
+  "template": "0TT4W000006engL",
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
